<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hoangdang.firstapp.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#ffffff">

    <!-- decimal field -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decimal"
        android:id="@+id/decText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textSize ="25sp"
        android:textColor="#e20f0f" />
    <!-- decimal input field -->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/decInput"
        android:textSize ="20sp"
        android:autoText="false"
        android:textColor="#000000"
        android:layout_below="@+id/decText"
        android:layout_centerHorizontal="true"
        android:height="25dp"
        android:width="300dp"
        android:hint="@string/inputHint"
        android:singleLine="false"
        android:selectAllOnFocus="true"
        android:inputType="number" />

    <!-- Binary field -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/binary"
        android:id="@+id/binary"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize ="25sp"
        android:textColor="#e20f0f" />
    <!-- Binary result field -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/binResultDisplay"
        android:id="@+id/binResult"
        android:layout_below="@+id/binary"
        android:layout_centerHorizontal="true"
        android:textSize ="20sp"
        android:height="25dp"
        android:width="300dp"
        android:background="@android:drawable/dialog_holo_light_frame" />

    <!-- Hexadecimal field -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hexadecimal"
        android:id="@+id/hexadecimal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:textSize ="25sp"
        android:textColor="#e20f0f" />
    <!-- hexadecimal result field -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hexResultDisplay"
        android:id="@+id/hexResult"
        android:layout_below="@+id/hexadecimal"
        android:layout_centerHorizontal="true"
        android:textSize ="20sp"
        android:height="25dp"
        android:width="300dp"
        android:background="@android:drawable/dialog_holo_light_frame" />

    <!-- Octadecimal field -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/octaDecimal"
        android:id="@+id/octaDecimal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:textSize ="25sp"
        android:textColor="#e20f0f" />
    <!-- Octadecimal result field -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hexResultDisplay"
        android:id="@+id/octaResult"
        android:layout_below="@+id/octaDecimal"
        android:layout_centerHorizontal="true"
        android:textSize ="20sp"
        android:height="25dp"
        android:width="300dp"
        android:background="@android:drawable/dialog_holo_light_frame" />

    <!-- convert button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Convert"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:id="@+id/button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/octaResult"
        android:layout_marginTop="20dp"
        android:textColor="#f8120a"
        android:backgroundTint="@android:color/transparent" />

</RelativeLayout>
